--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="icon" href="https://lh4.googleusercontent.com/Mt7aO83qD9RJeTu2hh7-wa9Dop3CN9A07RwRxg3iQPZnc_-a-KD8Bc3w7IADFt4rHMN6XDPcvXOExs9N5GMzc0-Ta3ZIxY47_bERX2bZaq2o_y2p" type="image/png">
-    <link rel="stylesheet" href="fullscreen.css">
+    <link rel="stylesheet" href="css/iframe.css">
 </head>
 <body>
     <iframe src="/static/embed#https://nowgg.lol" frameborder="0"></iframe>
