--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <iframe src="/static/embed#https://nowgg.lol" frameborder="0"></iframe>
+    <script src="/static/uv/uv.bundle.js" defer></script>
+    <script src="/static/uv/uv.config.js" defer></script>
+    <script src="/static/register-sw.js" defer></script>
+    <script src="/static/search.js" defer></script>
+    <script src="/static/index.js" defer></script>
 </body>
 </html>
