--- a/static/embed.html
+++ b/static/embed.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <div class="loader"></div>
+    <script src="uv/uv.bundle.js"></script>
+    <script src="uv/uv.config.js"></script>
+    <script src="register-sw.js"></script>
+    <script src="embed.js"></script>
 </body>
 </html>
