--- a/static/embed.html
+++ b/static/embed.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="/css/loading.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <div class="loader-container">
+        <div class="dots">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
+        <p class="loading-text">Loading...</p>
+    </div>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
     <script src="register-sw.js"></script>
