--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
             <div class="loading-text">Loading assets 0/19</div>
         </div>
     </div>
-    <iframe id="content-frame" src="/static/embed#https://nowgg.lol/?utm_source=now.gg-partner&utm_medium=bot&utm_campaign=carl" frameborder="0"></iframe>
+    <iframe src="/static/embed#https://nowgg.lol/?utm_source=now.gg-partner&utm_medium=bot&utm_campaign=carl" frameborder="0"></iframe>
     <script src="/static/uv/uv.bundle.js" defer></script>
     <script src="/static/uv/uv.config.js" defer></script>
     <script src="static/register-sw.js" defer></script>
     <script src="static/search.js" defer></script>
     <script src="static/index.js" defer></script>
     <script src="scripts/loader.js" defer></script>
-    <script src="scripts/alerter.js" defer></script>
 </body>
 </html>
