--- a/static/embed.html
+++ b/static/embed.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="icon" href="https://lh4.googleusercontent.com/Mt7aO83qD9RJeTu2hh7-wa9Dop3CN9A07RwRxg3iQPZnc_-a-KD8Bc3w7IADFt4rHMN6XDPcvXOExs9N5GMzc0-Ta3ZIxY47_bERX2bZaq2o_y2p" type="image/png">
-    <link rel="stylesheet" href="/css/dots.css">
+    <link rel="stylesheet" href="/css/loading.css">
 </head>
 <body>
-    <div class="loader-container">
-        <div class="dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+    <div class="loading-screen">
+        <div class="loader-container">
+            <div class="loading-bar">
+                <div class="loading-fill"></div>
+            </div>
+            <div class="loading-text">Loading assets 0/19</div>
         </div>
     </div>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
     <script src="register-sw.js"></script>
     <script src="embed.js"></script>
+    <script src="/scripts/loader.js"></script>
 </body>
 </html>
