--- a/static/embed.html
+++ b/static/embed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/css/thingy.css">
+    <link rel="stylesheet" href="/css/text.css">
     <link rel="icon" type="image/png" href="https://ssl.gstatic.com/classroom/favicon.png">
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
