--- a/static/embed.html
+++ b/static/embed.html
@@ -12,6 +12,6 @@
     <script src="embed.js"></script>
 </head>
 <body>
-    <div class="loading-text">loading plz wait..</div>
+    <div class="loading-text">Loading :)</div>
 </body>
 </html>
