--- a/static/embed.html
+++ b/static/embed.html
@@ -6,12 +6,14 @@
     <title>Home</title>
     <link rel="stylesheet" href="/css/text.css">
     <link rel="icon" type="image/png" href="https://ssl.gstatic.com/classroom/favicon.png">
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
-    <script src="register-sw.js"></script>
-    <script src="embed.js"></script>
 </head>
 <body>
-    <div class="loading-text">Loading :)</div>
+    <div class="container">
+        <div class="text">Loading<br>Roblox...</div>
+        <div class="logo-wrapper">
+            <img class="logo" src="/assets/roblox.gif" alt="roblox">
+            <img class="overlay-logo" src="/assets/thumbsup.gif" alt="thumbsup">
+        </div>
+    </div>
 </body>
 </html>
