--- a/static/embed.html
+++ b/static/embed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/css/text.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="https://ssl.gstatic.com/classroom/favicon.png">
 </head>
 <body>
@@ -15,5 +15,9 @@
             <img class="overlay-logo" src="/assets/thumbsup.gif" alt="thumbsup">
         </div>
     </div>
+    <script src="uv/uv.bundle.js"></script>
+    <script src="uv/uv.config.js"></script>
+    <script src="register-sw.js"></script>
+    <script src="embed.js"></script>
 </body>
 </html>
