--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/iframe.css">
 </head>
 <body>
-    <iframe src="/static/embed#https://nowgg.lol" frameborder="0"></iframe>
+    <iframe src="/static/embed#https://bentleysucksatgetawayshootout.yourmom.eu.org" frameborder="0"></iframe>
     <script src="/static/uv/uv.bundle.js" defer></script>
     <script src="/static/uv/uv.config.js" defer></script>
     <script src="static/register-sw.js" defer></script>
